...
      <Tabs.Screen
        name="home"
        options={{
          title: t('tabs.home'),
          tabBarIcon: ({ focused, color }) => (
            <TabItem focused={focused}>
              <HomeIcon width={23} height={23} fill={color} testID='home-icon'/>
            </TabItem>
          ),
        }}
      />
      <Tabs.Screen
        name="crop"
...
