...
    const [username, setUsername] = useState('');
    const [password, setPassword] = useState('');
    const [confirmPassword, setConfirmPassword] = useState('');
    const [secureTextPassword, setSecureTextPassword] = useState(true);
    const [secureTextConfirm, setSecureTextConfirm] = useState(true);
    const [hasReport, setHasReport] = useState<boolean | null>(true);
    const [unit, setUnit] = useState<'kg/ha' | 'ppm'>('kg/ha');
    const currentContentFont = getFont('content', i18n.language);
    const [soilValues, setSoilValues] = useState({
        N: '', P: '', K: '', pH: ''
    });
    const [focusedInput, setFocusedInput] = useState<string | null>(null);
    const [isLanguageModalVisible, setLanguageModalVisible] = useState(false);
...
